# klipo

./: .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-Apache-2.0-historical.md  NOTICE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release-windows.yml
LEGAL/: EULA.md  PRIVACY.md  REFUND.md
bench/: Cargo.toml  README.md  results-2026-05.md
bench/benches/: sqlite_fts.rs  turkish_search.rs
bench/src/: lib.rs
docs/: crypto.md  demo-video-script.md  demo-video-shotlist.md  gumroad-listing.md  gumroad-product-page.md  gumroad-setup-guide.md  hotkey-research.md  landing-bluedev.md  launch-draft.md  m3.2-test-corpus.md  perf-budget.md  perf-runbook.md  release-signing.md  security.md  smoke-test.md  storage.md  sync-protocol.md
marketing/gumroad/: README.md  buyer-readme.txt  capture.mjs  comparison.html  cover.html  hero.html  package.json  style.css  thumbnail.html
marketing/gumroad/scenes/: 01-brand-intro.html  02-problem.html  03-solution-reveal.html  04-capture-demo.html  05-search-demo.html  06-sensitive-demo.html  07-pricing.html  08-cta.html
scripts/: capture-screenshots.ps1  make-hero-gif.ps1  record-demo.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/scripts/: render-icon.mjs
src-tauri/src/: autostart.rs  commands.rs  lib.rs  main.rs  perf.rs
src-tauri/src/clipboard/: classify.rs  mod.rs  normalize.rs  paste.rs  pipeline.rs  sensitive.rs  source_app.rs  watcher_windows.rs
src-tauri/src/license/: gumroad.rs  manager.rs  mod.rs
src-tauri/src/storage/: blob.rs  clips.rs  error.rs  mod.rs  search.rs
src-tauri/src/storage/migrations/: 001_initial.sql  002_turkish_fts.sql  003_organize.sql  004_drop_tags.sql  005_labels.sql
src-tauri/tests/: storage_e2e.rs
src/components/: AlertDialog.tsx  ClipCard.tsx  OnboardingOverlay.tsx  ToggleSwitch.tsx
src/lib/: categories.ts  drag.ts  ipc.ts  theme.ts  utils.ts
src/routes/: Settings.tsx
src/routes/settings/: ExcludedAppsTab.tsx  GeneralTab.tsx  LicenseTab.tsx  PrivacyTab.tsx
src/styles/: globals.css
